--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saga Lab | Boutique App Development</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -28,7 +29,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Saga Lab. All rights reserved.</p>
+            <p>&copy; 2025 Saga Lab. All rights reserved.</p>
+            <p><a href="mailto:hi@sagalab.co" class="contact-link">hi@sagalab.co</a></p>
         </div>
     </footer>
 
