--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Saga Lab. All rights reserved.</p>
-            <p><a href="mailto:hi@sagalab.co" class="contact-link">hi@sagalab.co</a></p>
+            <p><a href="mailto:hi@sagalab.co" class="contact-link">contact</a></p>
         </div>
     </footer>
 
