description and fonts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <h1>Saga Lab</h1>
-            <p class="subtitle">Boutique App Development</p>
+            <p class="subtitle">App development agency</p>
             <p class="description">Run by creative technologists who love building simple, beautiful apps.</p>
         </div>
     </header>
@@ -30,7 +30,6 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Saga Lab. All rights reserved.</p>
-            <p><a href="mailto:hi@sagalab.co" class="contact-link">contact</a></p>
         </div>
     </footer>
 
