--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Saga Lab</h1>
+            <h1>Saga <span class="lab-gradient">Lab</span></h1>
             <p class="subtitle">App development agency</p>
             <p class="description">Run by creative technologists who love building simple, beautiful apps.</p>
         </div>
