--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saga Lab | Boutique App Development</title>
+    <title>Saga AI Lab | Boutique App Development</title>
     <link rel="stylesheet" href="style.css">
     
     <!-- Favicon References -->
@@ -18,8 +18,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Saga <span class="lab-gradient">Lab</span></h1>
-            <p class="subtitle">App development agency</p>
+            <h1>Saga <span class="ai-gradient">AI</span> <span class="lab-gradient">Lab</span></h1>
+            <p class="subtitle">Run by creative technologists who love experimenting with AI and building simple, beautiful apps that blend cutting-edge tech with artistic expression.</p>
             <p class="description">Run by creative technologists who love building simple, beautiful apps.</p>
         </div>
     </header>
@@ -34,7 +34,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Saga Lab. All rights reserved.</p>
+            <p>&copy; 2025 Saga AI Lab. All rights reserved.</p>
         </div>
     </footer>
 
