Update branding and subtitle in index.html
Changed the site title and footer to 'Saga AI Research Labs' and updated the subtitle to better reflect the lab's focus and expertise.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saga AI Lab | Boutique App Development</title>
+    <title>Saga AI Research Labs | Boutique App Development</title>
     <link rel="stylesheet" href="style.css">
     
     <!-- Favicon References -->
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <h1>Saga <span class="ai-gradient">AI</span> <span class="lab-gradient">Lab</span></h1>
-            <p class="subtitle">Run by creative technologists who love experimenting with AI and building simple, beautiful apps that blend cutting-edge tech with artistic expression.</p>
+            <p class="subtitle">Creative AI Research Lab founded by technologists with experience across virtually every type of software development. We love experimenting with AI and building simple, beautiful apps that blend cutting-edge tech with artistic expression.</p>
             <p class="description">Run by creative technologists who love building simple, beautiful apps.</p>
         </div>
     </header>
@@ -34,7 +34,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Saga AI Lab. All rights reserved.</p>
+            <p>&copy; 2025 Saga
+AI Research Labs. All rights reserved.</p>
         </div>
     </footer>
 
