--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <h1>Saga <span class="ai-gradient">AI</span> <span class="lab-gradient">Lab</span></h1>
-            <p class="subtitle">Creative AI Research Lab founded by technologists with experience across virtually every type of software development. We love experimenting with AI and building simple, beautiful apps that blend cutting-edge tech with artistic expression.</p>
+            <p class="subtitle">AI Research Lab founded by creative technologists with experience across virtually every type of software development. We love experimenting with AI and building simple, beautiful apps that blend cutting-edge tech with artistic expression.</p>
             <p class="description">Run by creative technologists who love building simple, beautiful apps.</p>
         </div>
     </header>
