Add social media meta tags and preview image
Added Open Graph and Twitter meta tags to index.html for improved social sharing. Included preview.jpg image for link previews.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sagalab.io/">
+    <meta property="og:title" content="Saga AI Research Labs | Boutique App Development">
+    <meta property="og:description" content="AI Research Lab founded by creative technologists. We love experimenting with AI and building simple apps that blend cutting-edge tech with artistic expression.">
+    <meta property="og:image" content="https://sagalab.io/images/preview.jpg">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sagalab.io/">
+    <meta property="twitter:title" content="Saga AI Research Labs | Boutique App Development">
+    <meta property="twitter:description" content="AI Research Lab founded by creative technologists. We love experimenting with AI and building simple apps that blend cutting-edge tech with artistic expression.">
+    <meta property="twitter:image" content="https://sagalab.io/images/preview.jpg">
 </head>
 <body>
     <header>
