--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
     
     <header>
         <div class="container">
+            <button class="theme-toggle" aria-label="Toggle dark mode" title="Toggle dark mode" aria-pressed="false">
+                <!-- Sun icon -->
+                <svg class="sun" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                    <path d="M6.76 4.84l-1.8-1.79L3.17 4.84l1.79 1.79 1.8-1.79zm10.48 0l1.79-1.79 1.79 1.79-1.79 1.79-1.79-1.79zM12 4V1h-0v3h0zm0 19v-3h0v3h0zM4 12H1v0h3v0zm22 0h-3v0h3v0zM6.76 19.16l-1.8 1.79-1.79-1.79 1.79-1.79 1.8 1.79zm12.69 0l1.79 1.79-1.79 1.79-1.79-1.79 1.79-1.79zM12 7a5 5 0 100 10 5 5 0 000-10z"/>
+                </svg>
+                <!-- Moon icon -->
+                <svg class="moon" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                    <path d="M21.75 14.5A9.75 9.75 0 0110.03 2.78a.75.75 0 00-1.06-.8A10.5 10.5 0 1022.58 15.7a.75.75 0 00-.83-1.2z"/>
+                </svg>
+            </button>
             <h1>Saga <span class="ai-gradient">AI</span> <span class="lab-gradient">Lab</span></h1>
             <p class="subtitle">AI Research Lab founded by two creative technologists. We love experimenting with AI and building simple apps that blend cutting-edge tech with artistic expression.</p>
             <p class="description">Run by creative technologists who love building simple, beautiful apps.</p>
