--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </svg>
             </button>
             <h1>Saga <span class="ai-gradient">AI</span> <span class="lab-gradient">Lab</span></h1>
-            <p class="subtitle">AI Research Lab founded by creative technologists. We love experimenting with AI and building simple apps that blend cutting-edge tech with artistic expression.</p>
+            <p class="subtitle">AI Research Lab founded by creative technologists. We love experimenting with AI and building apps that blend cutting-edge tech with artistic expression.</p>
             <p class="description">Run by creative technologists who love building simple, beautiful apps.</p>
         </div>
     </header>
