Add contact page and enhance contact options
Introduces contact.html with a styled contact section and particle background. Updates navigation in index.html to include a contact link and improves logo behavior. Expands script.js with mailto form handling, messaging app links, and footer links. Adds comprehensive contact section and particle animation styles to style.css.

--- a/index.html
+++ b/index.html
@@ -135,13 +135,14 @@
 <body>
     <nav class="main-nav">
         <div class="nav-container">
-            <div class="nav-logo">
-                <span class="logo-text">Saga <span class="ai-gradient">AI</span> <span class="lab-gradient">Lab</span></span>
-            </div>
+            <a href="#" class="nav-logo" id="home-logo">
+                <h1>Saga <span class="ai-gradient">AI</span> <span class="lab-gradient">Lab</span></h1>
+            </a>
             <ul class="nav-menu">
                 <li><a href="#ai-tools">AI Tools</a></li>
                 <li><a href="#mobile-apps">Mobile Apps</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="mailto:shogn@icloud.com" class="nav-link">Contact</a></li>
                 <li><a href="https://github.com/Saga-Labs" target="_blank">GitHub</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation menu">
@@ -165,7 +166,7 @@
                 </svg>
             </button>
             <div class="hero-content">
-                <h1>Build the Future with <span class="ai-gradient">AI</span></h1>
+                <h1>Building the Future with <span class="ai-gradient">AI</span></h1>
                 <p class="hero-subtitle">Leading AI research lab creating cutting-edge tools for developers, traders, and innovators. From autonomous trading systems to productivity apps.</p>
                 <div class="hero-stats">
                     <div class="stat">
@@ -256,12 +257,13 @@
                 </div>
             </div>
         </section>
+
+        
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Saga
-AI Research Labs. All rights reserved.</p>
+            <p>&copy; 2025 Saga AI Research Labs. All rights reserved.</p>
         </div>
     </footer>
 
