--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                         <span class="stat-label">Downloads</span>
                     </div>
                     <div class="stat">
-                        <span class="stat-number">App Store Featured</span>
-                        <span class="stat-label">Awards</span>
+                        <span class="stat-number">App Store</span>
+                        <span class="stat-label">Featured</span>
                     </div>
                 </div>
             </div>
