Redesign hero and add tech stack badges to app cards
Revamps the hero section with a new headline, subtitle, and call-to-action layout, and introduces a tech logos section with trust stats. App cards now display technology stack badges and App Store featured badges where applicable. Navigation and hero colors are updated for improved contrast, and floating particle effects are added to hero and about sections. Styles for buttons, sections, and footer are modernized and made more consistent across breakpoints.

--- a/index.html
+++ b/index.html
@@ -194,25 +194,48 @@
     <header class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <h1><span class="ai-gradient">AI Research Studio</span></h1>
-                <p class="hero-subtitle">AI tools for trading, development, automation and more...</p>
-                <div class="hero-stats">
-                    <div class="stat">
-                        <span class="stat-number">8+</span>
-                        <span class="stat-label">AI Applications</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-number">100K+</span>
-                        <span class="stat-label">Downloads</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-number">App Store</span>
-                        <span class="stat-label">Featured</span>
-                    </div>
+                <h1>AI-powered tools for<br>trading and automation.</h1>
+                <p class="hero-subtitle">Build intelligent systems with our suite of AI applications. From autonomous trading to productivity tools, we help developers and businesses automate their workflows.</p>
+                <div class="hero-actions">
+                    <a href="#ai-tools" class="cta-primary">Explore Tools</a>
+                    <a href="mailto:shogn@icloud.com" class="cta-secondary">Contact Sales</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <!-- Tech Logos Section -->
+    <section class="tech-logos-section">
+        <div class="container">
+            <p class="tech-logos-text">Built with cutting-edge technology</p>
+            <div class="tech-logos-grid">
+                <span class="tech-logo-text">Swift</span>
+                <span class="tech-logo-text">SwiftUI</span>
+                <span class="tech-logo-text">CoW Protocol</span>
+                <span class="tech-logo-text">Python</span>
+                <span class="tech-logo-text">OpenAI</span>
+                <span class="tech-logo-text">Claude</span>
+                <span class="tech-logo-text">Base</span>
+                <span class="tech-logo-text">Ethereum</span>
+                <span class="tech-logo-text">Windsurf</span>
+                <span class="tech-logo-text">Cursor</span>
+            </div>
+            <div class="trust-stats">
+                <div class="trust-stat">
+                    <span class="trust-number">100K+</span>
+                    <span class="trust-label">Downloads</span>
+                </div>
+                <div class="trust-stat">
+                    <span class="trust-number">8+</span>
+                    <span class="trust-label">Projects</span>
+                </div>
+                <div class="trust-stat">
+                    <span class="trust-number">Featured</span>
+                    <span class="trust-label">App Store</span>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <main>
         <section class="app-section" id="ai-tools">
