--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     <header class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <h1>AI-powered tools for<br>trading and automation.</h1>
-                <p class="hero-subtitle">Build intelligent systems with our suite of AI applications. From autonomous trading to productivity tools, we help developers and businesses automate their workflows.</p>
+                <h1>An AI Studio at the intersection of art and technology.</h1>
+                <p class="hero-subtitle">We experiment with cutting edge AI to solve real problems and push creative boundaries. From crypto trading bots to generative art, we're building the future of AI.</p>
                 <div class="hero-actions">
                     <a href="#ai-tools" class="cta-primary">Explore Tools</a>
                     <a href="mailto:shogn@icloud.com" class="cta-secondary">Contact Sales</a>
