--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
     <header class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <h1>An AI Studio at the intersection of art and technology.</h1>
-                <p class="hero-subtitle">We experiment with cutting edge AI to solve real problems and push creative boundaries. From crypto trading bots to generative art, we're building the future of AI.</p>
+                <h1>Where art and tech intersect</h1>
+                <p class="hero-subtitle">We are an AI studio experiment with cutting edge AI to solve real problems and push creative boundaries. From crypto trading bots to generative art.</p>
                 <div class="hero-actions">
                     <a href="#ai-tools" class="cta-primary">Explore Tools</a>
-                    <a href="mailto:shogn@icloud.com" class="cta-secondary">Contact Sales</a>
+                    <a href="mailto:shogn@icloud.com" class="cta-secondary">Contact Us</a>
                 </div>
             </div>
         </div>
