--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Where art and tech intersect</h1>
-                <p class="hero-subtitle">We are an AI studio experiment with cutting edge AI to solve real problems and push creative boundaries. From crypto trading bots to generative art.</p>
+                <p class="hero-subtitle">We are an AI studio experiment with cutting-edge AI to solve real problems and push creative boundaries. From crypto trading bots to generative art.</p>
                 <div class="hero-actions">
                     <a href="#ai-tools" class="cta-primary">Explore Tools</a>
                     <a href="mailto:shogn@icloud.com" class="cta-secondary">Contact Us</a>
@@ -207,7 +207,7 @@
     <!-- Tech Logos Section -->
     <section class="tech-logos-section">
         <div class="container">
-            <p class="tech-logos-text">Built with cutting-edge technology</p>
+            <p class="tech-logos-text">Building with the latest technologies</p>
             <div class="tech-logos-grid">
                 <span class="tech-logo-text">Swift</span>
                 <span class="tech-logo-text">SwiftUI</span>
