--- a/index.html
+++ b/index.html
@@ -223,140 +223,127 @@
 
     <!-- Tech Logos Section -->
     <section class="tech-logos-section">
-        <div class="container">
-            <p class="tech-logos-text">Building with the latest technologies</p>
-            <div class="tech-logos-ticker">
-                <div class="tech-logos-track">
-                    <div class="tech-logo-item">
-                        <img src="logos/swift-logo-png_seeklogo-252637.png" alt="Swift"
-                            class="tech-logo-img logo-medium">
-                        <span class="tech-logo-label">SwiftUI</span>
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/python-logo-0.png" alt="Python" class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/OpenAI-Logo_800x800.png" alt="OpenAI" class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/claude-logo-png_seeklogo-554540.png" alt="Claude AI"
-                            class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/Google-Gemini-Logo-PNG-Photos.png" alt="Google Gemini"
-                            class="tech-logo-img logo-medium">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/deepseek-ai-logo-png_seeklogo-611415.png" alt="DeepSeek AI"
-                            class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/Perplexity-AI-Logo-2023.png" alt="Perplexity AI"
-                            class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/cursor-logo-png_seeklogo-611587.png" alt="Cursor"
-                            class="tech-logo-img logo-small">
-                        <span class="tech-logo-label">Cursor</span>
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/coinbase-coin-logo-png_seeklogo-444569.png" alt="Coinbase"
-                            class="tech-logo-img logo-medium">
-                        <span class="tech-logo-label">Base</span>
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/Ethereum-Logo-PNG-Image.png" alt="Ethereum" class="tech-logo-img logo-small">
-                        <span class="tech-logo-label">Ethereum</span>
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/coingecko-logo-png_seeklogo-490314 (1).png" alt="CoinGecko"
-                            class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/TradingView-Logo-2021.png" alt="TradingView" class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/cowswap-logo.png" alt="CoW Protocol" class="tech-logo-img logo-small">
-                        <span class="tech-logo-label">CoW Protocol</span>
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/telegram-logo-0-2.png" alt="Telegram" class="tech-logo-img logo-small">
-                        <span class="tech-logo-label">Telegram</span>
-                    </div>
+        <p class="tech-logos-text">Building with the latest technologies</p>
+        <div class="tech-logos-ticker">
+            <div class="tech-logos-track">
+                <div class="tech-logo-item">
+                    <img src="logos/swift-logo-png_seeklogo-252637.png" alt="Swift" class="tech-logo-img logo-medium">
+                    <span class="tech-logo-label">SwiftUI</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/python-logo-0.png" alt="Python" class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/OpenAI-Logo_800x800.png" alt="OpenAI" class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/claude-logo-png_seeklogo-554540.png" alt="Claude AI"
+                        class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/Google-Gemini-Logo-PNG-Photos.png" alt="Google Gemini"
+                        class="tech-logo-img logo-medium">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/deepseek-ai-logo-png_seeklogo-611415.png" alt="DeepSeek AI"
+                        class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/Perplexity-AI-Logo-2023.png" alt="Perplexity AI" class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/cursor-logo-png_seeklogo-611587.png" alt="Cursor" class="tech-logo-img logo-small">
+                    <span class="tech-logo-label">Cursor</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/coinbase-coin-logo-png_seeklogo-444569.png" alt="Coinbase"
+                        class="tech-logo-img logo-medium">
+                    <span class="tech-logo-label">Base</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/Ethereum-Logo-PNG-Image.png" alt="Ethereum" class="tech-logo-img logo-small">
+                    <span class="tech-logo-label">Ethereum</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/Solana-SOL-scaled.png" alt="Solana" class="tech-logo-img logo-small">
+                    <span class="tech-logo-label">Solana</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/coingecko-logo-png_seeklogo-490314 (1).png" alt="CoinGecko"
+                        class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/TradingView-Logo-2021.png" alt="TradingView" class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/cowswap-logo.png" alt="CoW Protocol" class="tech-logo-img logo-small">
+                    <span class="tech-logo-label">CoW Protocol</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/telegram-logo-0-2.png" alt="Telegram" class="tech-logo-img logo-small">
+                    <span class="tech-logo-label">Telegram</span>
+                </div>
 
-                    <!-- Duplicate set for seamless loop -->
-                    <div class="tech-logo-item">
-                        <img src="logos/swift-logo-png_seeklogo-252637.png" alt="Swift"
-                            class="tech-logo-img logo-medium">
-                        <span class="tech-logo-label">SwiftUI</span>
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/python-logo-0.png" alt="Python" class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/OpenAI-Logo_800x800.png" alt="OpenAI" class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/claude-logo-png_seeklogo-554540.png" alt="Claude AI"
-                            class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/Google-Gemini-Logo-PNG-Photos.png" alt="Google Gemini"
-                            class="tech-logo-img logo-medium">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/deepseek-ai-logo-png_seeklogo-611415.png" alt="DeepSeek AI"
-                            class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/Perplexity-AI-Logo-2023.png" alt="Perplexity AI"
-                            class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/cursor-logo-png_seeklogo-611587.png" alt="Cursor"
-                            class="tech-logo-img logo-small">
-                        <span class="tech-logo-label">Cursor</span>
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/coinbase-coin-logo-png_seeklogo-444569.png" alt="Coinbase"
-                            class="tech-logo-img logo-medium">
-                        <span class="tech-logo-label">Base</span>
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/Ethereum-Logo-PNG-Image.png" alt="Ethereum" class="tech-logo-img logo-small">
-                        <span class="tech-logo-label">Ethereum</span>
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/coingecko-logo-png_seeklogo-490314 (1).png" alt="CoinGecko"
-                            class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/TradingView-Logo-2021.png" alt="TradingView" class="tech-logo-img logo-xxlarge">
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/cowswap-logo.png" alt="CoW Protocol" class="tech-logo-img logo-small">
-                        <span class="tech-logo-label">CoW Protocol</span>
-                    </div>
-                    <div class="tech-logo-item">
-                        <img src="logos/telegram-logo-0-2.png" alt="Telegram" class="tech-logo-img logo-small">
-                        <span class="tech-logo-label">Telegram</span>
-                    </div>
+                <!-- Duplicate set for seamless loop -->
+                <div class="tech-logo-item">
+                    <img src="logos/swift-logo-png_seeklogo-252637.png" alt="Swift" class="tech-logo-img logo-medium">
+                    <span class="tech-logo-label">SwiftUI</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/python-logo-0.png" alt="Python" class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/OpenAI-Logo_800x800.png" alt="OpenAI" class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/claude-logo-png_seeklogo-554540.png" alt="Claude AI"
+                        class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/Google-Gemini-Logo-PNG-Photos.png" alt="Google Gemini"
+                        class="tech-logo-img logo-medium">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/deepseek-ai-logo-png_seeklogo-611415.png" alt="DeepSeek AI"
+                        class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/Perplexity-AI-Logo-2023.png" alt="Perplexity AI" class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/cursor-logo-png_seeklogo-611587.png" alt="Cursor" class="tech-logo-img logo-small">
+                    <span class="tech-logo-label">Cursor</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/coinbase-coin-logo-png_seeklogo-444569.png" alt="Coinbase"
+                        class="tech-logo-img logo-medium">
+                    <span class="tech-logo-label">Base</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/Ethereum-Logo-PNG-Image.png" alt="Ethereum" class="tech-logo-img logo-small">
+                    <span class="tech-logo-label">Ethereum</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/Solana-SOL-scaled.png" alt="Solana" class="tech-logo-img logo-small">
+                    <span class="tech-logo-label">Solana</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/coingecko-logo-png_seeklogo-490314 (1).png" alt="CoinGecko"
+                        class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/TradingView-Logo-2021.png" alt="TradingView" class="tech-logo-img logo-xxlarge">
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/cowswap-logo.png" alt="CoW Protocol" class="tech-logo-img logo-small">
+                    <span class="tech-logo-label">CoW Protocol</span>
+                </div>
+                <div class="tech-logo-item">
+                    <img src="logos/telegram-logo-0-2.png" alt="Telegram" class="tech-logo-img logo-small">
+                    <span class="tech-logo-label">Telegram</span>
                 </div>
             </div>
-            <div class="trust-stats">
-                <div class="trust-stat">
-                    <span class="trust-number">100K+</span>
-                    <span class="trust-label">Downloads</span>
-                </div>
-                <div class="trust-stat">
-                    <span class="trust-number">8+</span>
-                    <span class="trust-label">Projects</span>
-                </div>
-                <div class="trust-stat">
-                    <span class="trust-number">Featured</span>
-                    <span class="trust-label">App Store</span>
-                </div>
-            </div>
+        </div>
         </div>
     </section>
 
